# dental-api

./: .dockerignore  .env.example  .gcloudignore  .gitignore  .vercelignore  2026-05-04-203049-this-session-is-being-continued-from-a-previous-c.txt  CLAUDE.md  CONTEXT.md  DEPLOYMENT.md  DEPLOY_AND_TEST.md  DEPLOY_GOOGLE_CLOUD.md  Dockerfile  FIX_VERCEL.md  GOOGLE_SERVICE_ACCOUNT_SETUP.md  HOW_TO_TEST_DATABASE.md  HOW_TO_TEST_GOOGLE_SERVICE_ACCOUNT.md  INITIALIZE_VERCEL.md  MIGRATE_WITH_ENV.md  MIGRATION_GUIDE.md  Makefile  QUICK_DEPLOY.md  QUICK_FIX_CALENDAR.md  QUICK_INIT.md  QUICK_MIGRATE_SUPABASE.md  RAILWAY_DEPLOY.md  README.md  README_MIGRATION.md  SUPABASE_SETUP.md  VERCEL_POSTGRES_SETUP.md  VERCEL_URLS.md  WHY_DATABASE_URL.md  add_service_account.py  add_to_vercel.sh  alembic.ini  app.py  apphosting.yaml  check_database.sh  check_vercel_env.py  cloudbuild.yaml  dental-dashboard-prototype.json  (+19 more)
.next/: trace  trace-build
alembic/: env.py
api/: caching.py  dependencies.py  errors.py  index.py  main.py  serializers.py  system.py
clients/: __init__.py  email_client.py  lab_case_numbering.py  sms_client.py  telnyx_messaging.py
database/: __init__.py  connection.py  models.py  observability.py  schema.py
docs/: openapi-v2.yaml
frontend/: 2026-05-04-013940-local-command-caveatcaveat-the-messages-below.txt  eslint.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  take-shots.mjs  test-ai-tabs.mjs  test-all.mjs  test-dash.mjs  test-dash2.mjs  test-final.mjs  test-integration.mjs  test-interactions.mjs  test-interactive.mjs  test-login.mjs  test-phase1.mjs  test-phase1b.mjs  test-phases.mjs  vite.config.ts  vitest.config.ts
scripts/: agent_loop.md  backfill_appt_tz.py  backfill_portal_memberships.py  backfill_v1_1.py  grant_clinic_access.py  init_database.py  init_vercel_db.py  migrate_add_busy_block_label.py  migrate_add_clinics.py  migrate_busy_block_v2.py  (+20 more)
(+1112 files in other folders)
