[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["api", "database", "tools", "services"]

[project]
name = "dental-api"
version = "0.1.0"
description = "FastAPI service for dental clinic calendar and database operations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.12.5",
    "httpx>=0.25.0",
    "pytz>=2025.2",
    "python-dotenv>=1.0.0",
    "twilio>=9.0.0",
    "pytest>=7.0.0",
    "alembic>=1.13.0",
    "pytest-asyncio>=0.23.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "pyyaml>=6.0",
    "python-dateutil>=2.8.2",
    "python-multipart>=0.0.27",
    "faker>=24.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
